src/objects/KS_Componentes__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto que contiene las operaciones que componen los productos no codificados</description>
    <fields>
        <fullName>KS_Accion_1__c</fullName>
        <label>Acción 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Accion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Accion_2__c</fullName>
        <label>Acción 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Accion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_No_codificado__c</fullName>
        <label>No codificado</label>
        <referenceTo>KS_No_codificado__c</referenceTo>
        <relationshipLabel>Componentes</relationshipLabel>
        <relationshipName>Componentes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Num_m_dulos_adicionales__c</fullName>
        <label>Num. módulos adicionales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_PVP_Tarifa__c</fullName>
        <label>PVP Tarifa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_PVR_Final__c</fullName>
        <formula>IF(TEXT(KS_Accion_1__c )=&apos;3. Dimensiones y corte&apos;, KS_PVP_Tarifa__c*1.1,
  IF(TEXT(KS_Accion_1__c)=&apos;4. Pintado&apos;,KS_PVP_Tarifa__c*1.5,
     IF(TEXT(KS_Accion_1__c)=&apos;5. Serigrafiado B/N&apos;,KS_PVP_Tarifa__c*1.7,
        IF(TEXT(KS_Accion_1__c)=&apos;6. Serigrafiado Color&apos;,KS_PVP_Tarifa__c*2,
           IF(TEXT(KS_Accion_1__c)=&apos;7. Pintado y serigrafiado B/N&apos;,KS_PVP_Tarifa__c*2,
              IF(TEXT(KS_Accion_1__c)=&apos;8. Pintado y serigrafiado Color&apos;,KS_PVP_Tarifa__c*2.5,KS_PVP_Tarifa__c))))))+
IF(TEXT(KS_Accion_2__c )=&apos;3. Dimensiones y corte&apos;, KS_PVP_Tarifa__c*1.1,
  IF(TEXT(KS_Accion_2__c)=&apos;4. Pintado&apos;,KS_PVP_Tarifa__c*1.5,
     IF(TEXT(KS_Accion_2__c)=&apos;5. Serigrafiado B/N&apos;,KS_PVP_Tarifa__c*1.7,
        IF(TEXT(KS_Accion_2__c)=&apos;6. Serigrafiado Color&apos;,KS_PVP_Tarifa__c*2,
           IF(TEXT(KS_Accion_2__c)=&apos;7. Pintado y serigrafiado B/N&apos;,KS_PVP_Tarifa__c*2,
              IF(TEXT(KS_Accion_2__c)=&apos;8. Pintado y serigrafiado Color&apos;,KS_PVP_Tarifa__c*2.5,KS_PVP_Tarifa__c))))))-KS_PVP_Tarifa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVR Final</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_PVR_Total__c</fullName>
        <formula>KS_Unidades__c * KS_PVR_Final__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVR Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Componentes</relationshipLabel>
        <relationshipName>Componentes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Producto_no_codificado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto no codificado</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>No Codificados D1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Componentes (Producto no codificado)</relationshipLabel>
        <relationshipName>Componentes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Sobrecoste_Modulos__c</fullName>
        <formula>(KS_PVP_Tarifa__c * KS_Num_m_dulos_adicionales__c *0.10)+KS_PVP_Tarifa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sobrecoste Modulos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Tamano__c</fullName>
        <label>Tamaño</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Unidad_de_medida__c</fullName>
        <label>Unidad de medida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Unidad_de_medida</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Unidades__c</fullName>
        <label>Unidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Componente</label>
    <nameField>
        <displayFormat>CTE-{000000}</displayFormat>
        <label>id Componente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Componentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Control_color_pintura</fullName>
        <active>true</active>
        <errorConditionFormula>OR(TEXT(KS_Accion_1__c)=&apos;4. Pintado&apos;,TEXT(KS_Accion_2__c)=&apos;4. Pintado&apos;) &amp;&amp;  KS_Color__c =&apos;&apos;</errorConditionFormula>
        <errorMessage>Si se requeire trabajo de pintura, debe de indicarse el color</errorMessage>
    </validationRules>
</CustomObject>